--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "zoho-webflow-connector",
+  "name": "zoho-crm-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.18.2"
-  },
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
